# Model-Selection

./: CMakeLists.txt  README.md  package.xml  setup.sh
models/battery/: model.config  model.sdf
models/battery/materials/scripts/: battery.material
models/dumpster_model/materials/scripts/: dumpster.material
models/equipment/: model.config  model.sdf
models/equipment/materials/scripts/: equipment.material
models/mars_plane/: model.config  model.sdf
models/mars_plane/materials/scripts/: Logo.material
models/maze_5x5/: model.config  model.sdf
models/maze_5x5/materials/scripts/: maze.material
models/stage2_plane/: model.config  model.sdf
models/stage2_plane/materials/scripts/: stage2.material
models/wheelie_bin/: Bin.blend  model.config  model.sdf  wheelie_bin.stl
models/wheelie_bin/materials/scripts/: wheelie_bin.material
plugins/: BatteryPlugin.cc  BatteryPlugin.hh  BetterReset.cc  BetterReset.hh
worlds/: battery.world  maze_5x5.world  model_spread.world  roady.world  stage2.world  stage2_mockup.world
